# Policy-AI-Assistant

./: .env.example  .gitignore  Dockerfile  README.md  build.sh  builder.py  cloudbuild.yaml  mypy.ini  pyproject.toml  setup.sh  start.sh
policy_documents/: IT_Security_Policy.txt  PTO_Policy.txt
src/: __init__.py  ingest.py
src/policy_assistant/: __init__.py  app.py  logging_config.py  rag_engine.py
