[tool.poetry]
name = "policy_assistant"
version = "0.1.0"
description = "A Slack bot for policy inquiries using RAG and Gemini."
authors = ["Muhammad Hammad Faisal <hammadfaisal178@gmail.com>"]
license = "MIT"
readme = "README.md"
packages = [{ include = "policy_assistant", from = "src" }]
package-mode = false

[tool.poetry.dependencies]
python = "^3.11"
slack-bolt = "^1.27.0"
python-dotenv = "^1.2.1"
llama-index-core = "^0.14.9"
llama-index-llms-google-genai = "^0.7.4"
llama-index-embeddings-huggingface = "^0.6.1"
pypdf = "^6.4.0"

[tool.poetry.group.dev.dependencies]
mypy = "^1.8.0"
ruff = "^0.2.1"
cowsay = "^6.0"

[tool.poetry.scripts]
build = "builder:run_build_script"


# ----------------------------------------------------------------------
# RUFF & FORMATTING CONFIGURATION
# ----------------------------------------------------------------------

[tool.ruff]
line-length = 99

[tool.ruff.lint]
select = ["ALL"]
ignore = ["ANN401", "BLE001", "COM812", "D211", "D213", "E501", "F401", "ISC001", "PLW0603", "S603", ]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
docstring-code-format = true
docstring-code-line-length = 88
exclude = [
    ".git",
    ".venv",
]


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"